Add audio and video extensions to `.gitignore`
Filter out common audio and video extensions, in case you use the
script while also working on it. Shouldn't affect the default videos
on the outputs/ directory.

--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,17 @@ dmypy.json
 
 # temp dir
 temp/
+
+# Audio and video
+*.mp4
+*.mkv
+*.webm
+*.avi
+*.wav
+*.wv
+*.flac
+*.m4a
+*.aac
+*.mp3
+*.ogg
+*.opus
